--- a/avicola_backend/src/main/resources/application.properties
+++ b/avicola_backend/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=avicola_backend
 spring.datasource.url=jdbc:mysql://localhost:3306/db_avicola?useSSL=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/db_ferreteria
 spring.datasource.username=root
+# Actualiza la contraseña a la que usas en MySQL Workbench
 spring.datasource.password=Alexandra1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
