--- a/avicola_backend/src/main/resources/application.properties
+++ b/avicola_backend/src/main/resources/application.properties
@@ -13,3 +13,16 @@ spring.servlet.multipart.max-request-size=5000KB
 # Configura el dialecto de Hibernate
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+
+# Configuración para solucionar problemas de CORS y tipos de contenido
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.mvc.contentnegotiation.default-content-type=application/json
+
+# Habilita CORS globalmente
+spring.web.cors.allowed-origins=http://localhost:4200
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+
+# Para depuración - muestra más información sobre errores
+logging.level.org.springframework.web=DEBUG
