--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           npm install -g @angular/cli
           cd frontend
           npm install
-          ng build --configuration=production
+          ng build --prod
           cd ../backend
           chmod +x mvnw
           ./mvnw clean package
