--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -52,9 +52,7 @@
                   "maximumError": "30kb"
                 }
               ],
-              "outputHashing": "all",
-              "baseHref": "/api/",
-              "deployUrl": "/api/"
+              "outputHashing": "all"
             },
             "development": {
               "buildOptimizer": false,
