--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production (Linux)
+name: Build and Deploy to Production
 
 on:
   push:
@@ -6,28 +6,88 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Deploy via SSH (Linux)
-      uses: appleboy/ssh-action@v0.1.10
+    # 1. Build Frontend
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+    - name: Install Frontend Dependencies and Build
+      working-directory: ./frontend
+      run: |
+        npm install
+        npm install -g @angular/cli
+        ng build --prod
+
+    # 2. Build Backend
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Build Backend with Maven
+      working-directory: ./backend
+      run: chmod +x mvnw && ./mvnw clean package -DskipTests
+
+    # 3. Deploy All Artifacts
+    - name: Deploy files to server
+      uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: 22
         script: |
-          cd /var/www/granja.elvita.proyecto
-          git pull
-          npm install -g @angular/cli
-          cd frontend
-          npm install
-          ng build --prod
-          cd ../backend
-          chmod +x mvnw
-          ./mvnw clean package
-          # Reinicia servicios si es necesario
+          # Stop services
+          sudo systemctl stop granja-backend.service || echo "Backend service not running or does not exist, continuing..."
+
+          # Create/clear frontend directory and set permissions
+          sudo mkdir -p /var/www/granja.elvita.proyecto/frontend/dist/avicola-frontend
+          sudo chown -R ${{ secrets.SERVER_USER }}:${{ secrets.SERVER_USER }} /var/www/granja.elvita.proyecto
+
+          # Create/clear backend directory
+          sudo mkdir -p /var/www/granja.elvita.proyecto/backend/target
+
+    - name: Copy Frontend Artifacts
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        port: 22
+        source: "frontend/dist/avicola-frontend/"
+        target: "/var/www/granja.elvita.proyecto/frontend/dist/avicola-frontend"
+        strip_components: 3
+
+    - name: Copy Backend Artifact
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        port: 22
+        source: "backend/target/*.jar"
+        target: "/var/www/granja.elvita.proyecto/backend/target/"
+
+    - name: Restart Services on Server
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        port: 22
+        script: |
+          # Optional: Create/update backend service if it doesn't exist
+          # You would need a granja-backend.service file for this
+
+          # Restart backend service
+          sudo systemctl restart granja-backend.service || echo "Could not restart backend service."
+
+          # Reload Nginx to be safe
+          sudo systemctl reload nginx
