--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         npm install
         npm install -g @angular/cli
-        ng build --prod
+        ng build --configuration production
 
     # 2. Build Backend
     - name: Set up JDK 17
