--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,13 @@
-FROM openjdk:17-jdk-slim
+# Etapa de build
+FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /app
-COPY target/avicola_backend-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8080
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# Etapa de producción
+FROM eclipse-temurin:21-jre-alpine
+WORKDIR /app
+COPY --from=build /app/target/avicola_backend-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8088
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
