--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,33 +1,65 @@
-server {
-  listen 80;
-  server_name localhost;
+events {
+    worker_connections 1024;
+}
 
-  location / {
-    root   /usr/share/nginx/html;
-    try_files $uri $uri/ /index.html;
-  }
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-  location /api/ {
-    proxy_pass http://backend:8088/api/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-  location /health {
-    proxy_pass http://backend:8088/health;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
+    access_log  /var/log/nginx/access.log  main;
 
-  location /uploads/ {
-    proxy_pass http://backend:8088/uploads/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
+    sendfile        on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+    keepalive_timeout  65;
+    types_hash_max_size 2048;
+
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss;
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        location / {
+            root   /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /api/ {
+            proxy_pass http://backend:8088/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /health {
+            proxy_pass http://backend:8088/health;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_Set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_Set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /uploads/ {
+            proxy_pass http://backend:8088/uploads/;
+            proxy_Set_header Host $host;
+            proxy_Set_header X-Real-IP $remote_addr;
+            proxy_Set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_Set_header X-Forwarded-Proto $scheme;
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
+    }
 }
