--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -45,16 +45,16 @@ http {
             proxy_pass http://backend:8088/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_Set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_Set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /uploads/ {
             proxy_pass http://backend:8088/uploads/;
-            proxy_Set_header Host $host;
-            proxy_Set_header X-Real-IP $remote_addr;
-            proxy_Set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_Set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         error_page   500 502 503 504  /50x.html;
