--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,6 @@ RUN npm run build --configuration=production
 
 # Etapa de producción
 FROM nginx:alpine
-COPY --from=build /app/dist/ /usr/share/nginx/html
+COPY --from=build /app/dist/avicola-frontend/ /usr/share/nginx/html/
 COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
