--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,7 +26,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name granja.improvement-solution.com localhost;
 
         location / {
             root   /usr/share/nginx/html;
