--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,5 +9,5 @@ RUN npm run build --configuration=production
 # Etapa de producción
 FROM nginx:alpine
 COPY --from=build /app/dist/avicola-frontend/ /usr/share/nginx/html/
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
