feat: Add SSL/HTTPS support with Let's Encrypt certificates

--- a/frontend/nginx-ssl.conf
+++ b/frontend/nginx-ssl.conf
@@ -11,8 +11,8 @@ server {
     server_name granja.improvement-solution.com;
 
     # Certificados SSL
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/granja.improvement-solution.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/granja.improvement-solution.com/privkey.pem;
 
     # Configuración SSL moderna
     ssl_protocols TLSv1.2 TLSv1.3;
