fix: Remove deprecated http2 directive and invalid must-revalidate value from nginx config

--- a/frontend/nginx-ssl.conf
+++ b/frontend/nginx-ssl.conf
@@ -7,7 +7,7 @@ server {
 
 # Servidor HTTPS
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
     server_name granja.improvement-solution.com;
 
     # Certificados SSL
@@ -73,6 +73,6 @@ server {
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private must-revalidate auth;
+    gzip_proxied expired no-cache no-store private auth;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript application/json;
 }
