--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,9 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=production
       - SERVER_PORT=8088
-      - DB_HOST=mysql
-      - DB_PORT=3308
-      - DB_NAME=db_avicola
-      - DB_USER=avicola_user
-      - DB_PASSWORD=avicola_password
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/db_avicola?useSSL=false&serverTimezone=UTC
+      - SPRING_DATASOURCE_USERNAME=avicola_user
+      - SPRING_DATASOURCE_PASSWORD=avicola_password
     depends_on:
       - mysql
     networks:
