--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.web.cors.allow-credentials=true
 spring.web.cors.max-age=3600
 
 # Configuración de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/db_avicola?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Alexandra1
+spring.datasource.url=jdbc:mysql://mysql:3306/db_avicola?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=avicola_user
+spring.datasource.password=avicola_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de JPA y Hibernate
