--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,6 @@ RUN mvn clean package -DskipTests
 # Etapa de producción
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-COPY --from=build /app/target/avicola_backend-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8088
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
