--- a/backend/src/main/resources/application-production.properties
+++ b/backend/src/main/resources/application-production.properties
@@ -19,6 +19,8 @@ cors.allowed-origins=http://localhost,http://75.119.128.166,https://granja.elvit
 # File upload configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
+app.upload.dir=/app/uploads
 
 # Logging
 logging.level.com.wil.avicola_backend=INFO
