--- a/app_granjaelvita/pubspec.yaml
+++ b/app_granjaelvita/pubspec.yaml
@@ -30,11 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.1.1
+  http: ^1.1.0
+  intl: ^0.20.2
+  fl_chart: ^0.69.0
+  local_auth: ^2.1.0
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
