Migración completa a PostgreSQL - eliminado MySQL del pom.xml

--- a/backend/src/main/resources/application-local.example.properties
+++ b/backend/src/main/resources/application-local.example.properties
@@ -1,11 +1,11 @@
 # Perfil LOCAL (ejemplo). Actívalo con:
 # mvn spring-boot:run "-Dspring-boot.run.profiles=local"
 
-# Base de datos local
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_avicola?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# Base de datos local PostgreSQL
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/db_avicola
 spring.datasource.username=avicola_user
 spring.datasource.password=avicola_password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate (más verboso para dev)
 spring.jpa.hibernate.ddl-auto=update
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Logging útil en desarrollo
 logging.level.com.wil.avicola_backend=DEBUG
