--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -1,13 +1,14 @@
 # Configuración LOCAL (desarrollo en tu PC)
 # Ejecuta con: -Dspring.profiles.active=local o SPRING_PROFILES_ACTIVE=local
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_avicola?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5434/db_avicola
+spring.datasource.username=postgres
 spring.datasource.password=Alexandra1
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8088
