--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,18 +11,18 @@ spring.web.cors.exposed-headers=Authorization,Content-Disposition
 spring.web.cors.allow-credentials=true
 spring.web.cors.max-age=3600
 
-# Configuración de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/db_avicola?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=avicola_user
-spring.datasource.password=avicola_password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Configuración de la base de datos PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5434/db_avicola
+spring.datasource.username=postgres
+spring.datasource.password=Alexandra1
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración de JPA y Hibernate
 # NOTA: Este sistema utiliza la tabla 'usuarios' para la gestión de usuarios (NO la tabla 'users')
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=false
 spring.jpa.open-in-view=false
 
